chore(deps)!: change to webpack using ionic v6

--- a/poc-mfe-capacitor-host/ionic.config.json
+++ b/poc-mfe-capacitor-host/ionic.config.json
@@ -1,7 +1,5 @@
 {
-  "name": "poc-mfe-capacitor-host",
-  "integrations": {
-    "capacitor": {}
-  },
-  "type": "vue-vite"
+  "name": "ionic-app-base",
+  "integrations": {},
+  "type": "react"
 }
