--- a/poc-mfe-capacitor/ionic.config.json
+++ b/poc-mfe-capacitor/ionic.config.json
@@ -1,7 +1,5 @@
 {
-  "name": "poc-mfe-capacitor",
-  "integrations": {
-    "capacitor": {}
-  },
-  "type": "react-vite"
+  "name": "ionic-app-base",
+  "integrations": {},
+  "type": "react"
 }
