--- a/poc-mfe-capacitor-host/package.json
+++ b/poc-mfe-capacitor-host/package.json
@@ -43,15 +43,16 @@
   },
   "devDependencies": {
     "@capacitor/cli": "5.7.0",
+    "@craco/craco": "^7.1.0",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
+    "start": "PORT=3002 craco start",
+    "build": "craco build",
+    "test": "craco test --transformIgnorePatterns 'node_modules/(?!(@ionic/react|@ionic/react-router|@ionic/core|@stencil/core|ionicons)/)'",
     "eject": "react-scripts eject",
     "lint": "eslint --ext .ts,.tsx src"
   },
